target/classes/META-INF/fabric8/openshift/springboot-mysql-fabric-app-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=springboot-mysql-fabric-app&var-version=1.0
    fabric8.io/scm-tag: HEAD
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/springboot-mysql-fabric-app
  labels:
    hystrix.enabled: "true"
    app: springboot-mysql-fabric-app
    provider: fabric8
    version: "1.0"
    group: com.sample
  name: springboot-mysql-fabric-app
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: springboot-mysql-fabric-app
    provider: fabric8
    group: com.sample
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/iconUrl: img/icons/spring-boot.svg
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=springboot-mysql-fabric-app&var-version=1.0
        fabric8.io/scm-tag: HEAD
        fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/springboot-mysql-fabric-app
      labels:
        hystrix.enabled: "true"
        app: springboot-mysql-fabric-app
        provider: fabric8
        version: "1.0"
        group: com.sample
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: springboot-mysql-fabric-app:1.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: springboot-mysql-fabric-app:1.0
    type: ImageChange
